# matchmake

./: .gitignore  Cargo.toml  README.md
clients/libmatchmake/: Cargo.toml
clients/matchmake-rs/: Cargo.toml
crates/models/src/: lib.rs
docs/: API.md
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
