[workspace]
resolver = "2"
members = [
    "clients/libmatchmake",
    "clients/matchmake-rs", "crates/models",
    # "crates/*",
    "services/*",
    "services/*",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
